--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,20 @@
   <name>FreeCRMTest</name>
   <url>http://maven.apache.org</url>
   
+ <build>
+ <plugins> 
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M8</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin> 
+  </plugins>           
+ </build>
 
   <properties>
  
@@ -17,6 +31,9 @@
      <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+
+
 
   <dependencies>
    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
